--- a/ui/package.json
+++ b/ui/package.json
@@ -36,7 +36,7 @@
     "@terra-ui-packages/core-utils": "0.0.6",
     "@types/color": "^3.0.5",
     "@types/enzyme": "^3.10.15",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^27.5.2",
     "@types/js-cookie": "^2.2.2",
     "@types/lodash": "^4.14.199",
     "@types/node": "^10.12.11",
@@ -85,10 +85,10 @@
     "yarn": "^1.22.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.5.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
@@ -96,7 +96,7 @@
     "enzyme": "^3.11.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
