--- a/api/src/main/resources/leonardo.yaml
+++ b/api/src/main/resources/leonardo.yaml
@@ -1501,8 +1501,8 @@ components:
     AllowedChartName:
       type: string
       enum:
-        - aou-rstudio-chart
-        - aou-sas-chart
+        - rstudio
+        - sas
     AppStatus:
       type: string
       enum:
