--- a/tanagra-aou-utils/tanagra-ui.yaml
+++ b/tanagra-aou-utils/tanagra-ui.yaml
@@ -1,14 +1,14 @@
 env: standard
-runtime: nodejs16
+runtime: nodejs18
 service: tanagra-ui
 service_account: ${SERVICE_ACCOUNT}
 entrypoint: react-scripts start
 handlers:
-  - url: /static
+  - url: /tanagra/static
     static_dir: build/static
-  - url: /(.*\.(json|ico|js))$
+  - url: /tanagra/(.*\.(json|ico|js))$
     static_files: build/\1
     upload: build/.*\.(json|ico|js)$
-  - url: /.*
+  - url: /tanagra/.*
     static_files: build/index.html
     upload: build/index.html
