new sam client is supposed to fix this issue

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -482,8 +482,8 @@ dependencies {
     implementation 'jakarta.mail:jakarta.mail-api:2.1.1'
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:$project.ext.MAPSTRUCT_VERSION"
 
-    // updated 27 Nov 2023
-    implementation("org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-4e524b8") {
+    // updated 30 Nov 2023 to most recent passing Sam on 28 Nov
+    implementation("org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-8713af5") {
       exclude group: 'org.apache.oltu.oauth2', module: 'org.apache.oltu.oauth2.common'
     }
 
