update and consolidate tanagra url properties

--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -182,7 +182,6 @@
     "latestAouVersion": 1
   },
   "tanagra": {
-    "baseUrl": "https:\/\/aou-tanagra-dev.fake-research-aou.org",
-    "workbenchBaseUrl": "https:\/\/test.fake-research-aou.org"
+    "baseUrl": "https:\/\/test.fake-research-aou.org"
   }
 }
