--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -175,7 +175,6 @@
     "latestAouVersion": 1
   },
   "tanagra": {
-    "baseUrl": "http:\/\/localhost:3000",
-    "workbenchBaseUrl": "http:\/\/localhost:4200"
+    "baseUrl": "http:\/\/localhost:3000"
   }
 }
