--- a/api/build.gradle
+++ b/api/build.gradle
@@ -87,6 +87,9 @@ configurations {
     __bigQueryTest__Compile.extendsFrom testImplementation
     __bigQueryTest__Runtime.extendsFrom testRuntime
 
+    __contractTest__Compile.extendsFrom testImplementation
+    __contractTest__Runtime.extendsFrom testRuntime
+
     __integration__Compile.extendsFrom testImplementation
     __integration__Runtime.extendsFrom testRuntime
 
@@ -313,6 +316,18 @@ sourceSets {
             compileClasspath += main.output + test.output + generated.output
             runtimeClasspath += main.output + test.output + generated.output
             srcDir file('src/bigquerytest/java')
+        }
+    }
+
+    // contract testing sources
+    __contractTest__ {
+        resources {
+            srcDir "contracttest/**"
+        }
+        java {
+            compileClasspath += main.output + generated.output
+            runtimeClasspath += main.output + generated.output
+            srcDir file('src/contracttest/java')
         }
     }
 
@@ -557,6 +572,19 @@ task integrationTest(type: Test) {
     testClassesDirs = sourceSets.__integration__.output.classesDirs
     classpath = sourceSets.__integration__.runtimeClasspath
     // These tests should always run when requested since they consume and produce side-effects.
+    outputs.upToDateWhen { false }
+
+    useJUnitPlatform()
+
+    // Option to control size of stack trace:
+    // jvmArgs '-XX:MaxJavaStackTraceDepth=10'
+}
+
+task contractTest(type: Test) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = 'Run contract test suite.'
+    testClassesDirs = sourceSets.__contractTest__.output.classesDirs
+    classpath = sourceSets.__contractTest__.runtimeClasspath
     outputs.upToDateWhen { false }
 
     useJUnitPlatform()
@@ -860,7 +888,9 @@ compileTestKotlin {
 }
 
 dependencies {
-  modules {
+    testImplementation 'au.com.dius:pact-jvm-consumer-java8:4.0.10'
+    testImplementation 'au.com.dius:pact-jvm-consumer-junit5:4.0.10'
+    modules {
     module("com.sun.activation:jakarta.activation") {
       replacedBy("jakarta.annotation:jakarta.annotation-api")
     }
