--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -875,7 +875,7 @@ workflows:
           - ui-unit-test
       - api-contract-upload:
           requires:
-          - api-unit-test
+          - api-contract-test
       # Deploy to "test" on main branch merges
       - api-deploy-to-test:
           <<: *filter-main-branch
