--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -571,8 +571,18 @@ jobs:
           working_directory: ~
           command: |
             pwd
+      - run:
+          name: ls tmp pre
+          working_directory: ~
+          command: |
+            ls /tmp
       - attach_workspace:
           at: /tmp/workspace
+      - run:
+          name: ls tmp post
+          working_directory: ~
+          command: |
+            ls /tmp
       - run:
           name: ls pacts
           working_directory: ~
