--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -414,15 +414,39 @@ jobs:
           project-token: $CODACY_PROJECT_TOKEN
 
   api-contract-upload:
-    executor: workbench-executor
+    executor: pact-executor
     steps:
-    - attach_workspace:
-        at: /tmp/workspace
+    - run:
+        name: Echo
+        command: |
+          echo Hello Circle!
     - run:
         name: ls home
         working_directory: ~
         command: |
           ls
+    - run:
+        name: pwd
+        working_directory: ~
+        command: |
+          pwd
+    - run:
+        name: ls tmp pre
+        working_directory: ~
+        command: |
+          ls /tmp
+    - attach_workspace:
+        at: /tmp/workspace
+    - run:
+        name: ls tmp/workspace
+        working_directory: ~
+        command: |
+          ls /tmp/workspace
+    - run:
+        name: ls tmp post
+        working_directory: ~
+        command: |
+          ls /tmp/workspace
     - run:
         name: ls pacts
         working_directory: ~
@@ -579,10 +603,15 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - run:
+          name: ls tmp/workspace
+          working_directory: ~
+          command: |
+            ls /tmp/workspace
+      - run:
           name: ls tmp post
           working_directory: ~
           command: |
-            ls /tmp
+            ls /tmp/workspace
       - run:
           name: ls pacts
           working_directory: ~
