--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,8 @@ commands:
               --git-version "${CIRCLE_TAG}" \
               --app-version "${CIRCLE_TAG}" \
               --circle-url "https://circleci.com/workflow-run/${CIRCLE_WORKFLOW_ID}" \
-              --key-file ~/workbench/api/circle-sa-key.json
+              --key-file ~/workbench/api/circle-sa-key.json \
+              --no-promote
           name: Deploy API and UI to all-of-us-rw-stable App Engine
 
   gcloud-auth-login:
