--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -453,6 +453,7 @@ jobs:
         command: |
           ls /tmp/workspace/pacts
 
+
   api-test-coverage:
     #Jacoco runs against test results to get test coverage
     executor: workbench-executor
@@ -589,34 +590,12 @@ jobs:
           name: ls home
           working_directory: ~
           command: |
-            ls
+            pact-broker
       - run:
-          name: pwd
+          name: ls home
           working_directory: ~
           command: |
-            pwd
-      - run:
-          name: ls tmp pre
-          working_directory: ~
-          command: |
-            ls /tmp
-      - attach_workspace:
-          at: /tmp/workspace
-      - run:
-          name: ls tmp/workspace
-          working_directory: ~
-          command: |
-            ls /tmp/workspace
-      - run:
-          name: ls tmp post
-          working_directory: ~
-          command: |
-            ls /tmp/workspace
-      - run:
-          name: ls pacts
-          working_directory: ~
-          command: |
-            ls /tmp/workspace/pacts
+            pact-broker publish
 
   e2etests-deploy-ui:
     machine:
