--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,10 +192,16 @@ commands:
           credentials e.g. for gcloud or gsutil commands.
         type: boolean
         default: false
+      credentials_env_var:
+        type: string
+        default: "GCLOUD_CREDENTIALS"
+      key_env_var:
+        type: string
+        default: "GCLOUD_CREDENTIALS_KEY"
     steps:
       - run:
           working_directory: ~/workbench
-          command: ci/activate_creds.sh api/circle-sa-key.json
+          command: ci/activate_creds.sh api/circle-sa-key.json <<parameters.credentials_env_var>> <<parameters.key_env_var>>
       - when:
           condition: << parameters.with_application_default_credentials >>
           steps:
