Automate deployment process for the stable environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,25 +124,55 @@ commands:
       - run:
           command: git submodule update -f --init --recursive
 
-  deploy-to-staging-command:
-    description: "Deploy API and UI to staging App Engine"
+  deploy-command:
+    description: "Deploy API and UI to App Engine"
+    parameters:
+      project_name:
+        type: string
+      service_account:
+        type: string
+      credentials_env_var:
+        type: string
+      key_env_var:
+        type: string
     steps:
       - checkout-code
       - attach_workspace:
           at: .
-      - gcloud-auth-login
+      - gcloud-auth-login:
+          credentials_env_var: << parameters.credentials_env_var >>
+          key_env_var: << parameters.key_env_var >>
       - deploy:
           working_directory: ~/workbench/deploy
           command: |
             ./project.rb deploy \
-              --project all-of-us-rw-staging \
-              --account << pipeline.parameters.circle-service-account >> \
+              --project << parameters.project_name >> \
+              --account << parameters.service_account >> \
               --git-version "${CIRCLE_TAG}" \
               --app-version "${CIRCLE_TAG}" \
               --circle-url "https://circleci.com/workflow-run/${CIRCLE_WORKFLOW_ID}" \
               --key-file ~/workbench/api/circle-sa-key.json \
               --promote
-          name: Deploy API and UI to all-of-us-rw-staging App Engine
+          name: Deploy API and UI to << parameters.project_name >> App Engine
+
+  deploy-to-staging-command:
+    description: "Deploy to staging environment"
+    steps:
+      - deploy-command:
+          project_name: "all-of-us-rw-staging"
+          service_account: "<< pipeline.parameters.circle-service-account >>"
+          credentials_env_var: "GCLOUD_CREDENTIALS"
+          key_env_var: "GCLOUD_CREDENTIALS_KEY"
+
+  deploy-to-stable-command:
+    description: "Deploy to stable environment"
+    steps:
+      - deploy-command:
+          project_name: "all-of-us-rw-stable"
+          service_account: "deploy@all-of-us-rw-stable.iam.gserviceaccount.com"
+          credentials_env_var: "SERVICE_ACCOUNT_CREDENTIALS_DEPLOY_STABLE_ENV"
+          key_env_var: "SERVICE_ACCOUNT_CREDENTIALS_DEPLOY_STABLE_ENV_KEY"
+
 
   gcloud-auth-login:
     description: "Activate CircleCI service account credential"
@@ -155,10 +185,16 @@ commands:
           credentials e.g. for gcloud or gsutil commands.
         type: boolean
         default: false
+      credentials_env_var:
+        type: string
+        default: "GCLOUD_CREDENTIALS"
+      key_env_var:
+        type: string
+        default: "GCLOUD_CREDENTIALS_KEY"
     steps:
       - run:
           working_directory: ~/workbench
-          command: ci/activate_creds.sh api/circle-sa-key.json
+          command: ci/activate_creds.sh api/circle-sa-key.json <<parameters.credentials_env_var>> <<parameters.key_env_var>>
       - when:
           condition: << parameters.with_application_default_credentials >>
           steps:
@@ -629,6 +665,12 @@ jobs:
     steps:
       - deploy-to-staging-command
 
+  deploy-to-stable:
+    executor: workbench-executor
+    resource_class: large
+    steps:
+      - deploy-to-stable-command
+
   puppeteer-generate-access-tokens:
     executor: puppeteer-executor
     parameters:
@@ -895,6 +937,15 @@ workflows:
             - deploy-to-staging
             - puppeteer-env-setup
             - puppeteer-generate-access-tokens
+      - deploy-to-stable-approval:
+          <<: *filter-release-tags
+          type: approval
+          requires:
+            - puppeteer-test
+      - deploy-to-stable:
+          <<: *filter-release-tags
+          requires:
+            - deploy-to-stable-approval
 
   nightly-tests:
     triggers:
