--- a/api/build.gradle
+++ b/api/build.gradle
@@ -56,8 +56,11 @@ plugins {
     id 'jacoco'
 }
 
-if (JavaVersion.current() != JavaVersion.VERSION_11) {
-    throw new GradleException("This build must be run with Java 11. See developer-system-initialization.md. The java version used ${JavaVersion.current()}")
+if (JavaVersion.current() != JavaVersion.VERSION_17) {
+     throw new GradleException(
+            "This build must be run with Java 17. " +
+                    "See developer-system-initialization.md. " +
+                    "The java version used was ${JavaVersion.current()}.")
 }
 
 if (System.getenv("ADD_XLINT_DEPRECATION")) {
