add more sync notes

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -56,7 +56,11 @@ plugins {
     id 'jacoco'
 }
 
-// keep in sync with sourceCompatibility and targetCompatibility
+// keep in sync with:
+// sourceCompatibility and targetCompatibility in this file
+// the runtime field in api/src/main/webapp/WEB-INF/appengine-web.xml.template
+// the Docker image in ci/Dockerfile.circle_build
+// the Docker image in deploy/Dockerfile
 if (JavaVersion.current() != JavaVersion.VERSION_17) {
      throw new GradleException(
             "This build must be run with Java 17. " +
