--- a/ci/Dockerfile.circle_build
+++ b/ci/Dockerfile.circle_build
@@ -13,7 +13,7 @@
 
 # Note: we depend on dockerize being installed on this image.
 #
-# We use OpenJDK 17, Node, and some common browsers from CircleCI's base image
+# We use OpenJDK, Node, and some common browsers from CircleCI's base image
 # see: https://circleci.com/docs/2.0/circleci-images/#language-image-variants
 # and https://discuss.circleci.com/t/legacy-convenience-image-deprecation
 FROM cimg/openjdk:17.0-browsers
