--- a/ci/Dockerfile.circle_build
+++ b/ci/Dockerfile.circle_build
@@ -36,8 +36,8 @@ RUN sudo apt-get update && sudo apt-get install --no-install-recommends -yq \
   python3-pip \
   ruby \
   wait-for-it \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+  && sudo apt-get clean \
+  && sudo rm -rf /var/lib/apt/lists/*
 
 RUN sudo pip install --upgrade pip pylint
 
