disable debug logging

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -14,7 +14,7 @@ spring.main.banner-mode=off
 logging.level.org.springframework=WARN
 
 # Change to true for verbose Hibernate SQL
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 
 # Uncomment the following to turn on full SQL debugging
 #spring.jpa.show-sql=true
