--- a/api/build.gradle
+++ b/api/build.gradle
@@ -56,8 +56,20 @@ plugins {
     id 'jacoco'
 }
 
-if (JavaVersion.current() != JavaVersion.VERSION_11) {
-    throw new GradleException("This build must be run with Java 11. See developer-system-initialization.md. The java version used ${JavaVersion.current()}")
+// keep in sync with:
+// the runtime field in api/src/main/webapp/WEB-INF/appengine-web.xml.template
+// the Docker image in ci/Dockerfile.circle_build
+// the Docker image in deploy/Dockerfile
+// in this file:
+// * sourceCompatibility
+// * targetCompatibility
+// * compileKotlin.kotlinOptions.jvmTarget
+// * compileTestKotlin.kotlinOptions.jvmTarget
+if (JavaVersion.current() != JavaVersion.VERSION_17) {
+     throw new GradleException(
+            "This build must be run with Java 17. " +
+                    "See developer-system-initialization.md. " +
+                    "The java version used was ${JavaVersion.current()}.")
 }
 
 if (System.getenv("ADD_XLINT_DEPRECATION")) {
@@ -683,10 +695,10 @@ version = '0.1.0'          // Version in generated output
 
 // This restricts the language features that may be used to those at or below the given Java
 // version.
-sourceCompatibility = 11
+sourceCompatibility = 17
 
 // This restricts the runtime environment to be at or above the given Java version.
-targetCompatibility = 11
+targetCompatibility = 17
 
 task listProjectAPIs(type: GenerateAPIListingTask)
 
@@ -878,12 +890,12 @@ task backfillGSuiteUserData(type: JavaExec) {
 
 compileKotlin {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = 17
     }
 }
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = 17
     }
 }
 
