Updated api to return a text and an html version of code.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -8052,6 +8052,8 @@ components:
       properties:
         html:
           type: string
+        text:
+          type: string
     SurveysResponse:
       required:
       - items
