Cron job for cloud taskto run only on test

--- a/api/src/main/webapp/WEB-INF/cron_base.yaml
+++ b/api/src/main/webapp/WEB-INF/cron_base.yaml
@@ -18,6 +18,11 @@ cron:
   target: api
 - description: Find and alert users that have exceeded their free tier billing usage using cloud task
   url: "/v1/cron/checkFreeTierBillingUsageCloudTask"
+  schedule: every 99999 hours
+  timezone: UTC
+  target: api
+- description: Find and alert users that have exceeded their free tier billing usage NOT using cloud task
+  url: "/v1/cron/checkFreeTierBillingUsage"
   schedule: every 30 minutes
   timezone: UTC
   target: api
