--- a/api/src/main/webapp/WEB-INF/cron_test.yaml
+++ b/api/src/main/webapp/WEB-INF/cron_test.yaml
@@ -3,5 +3,7 @@ cron:
   schedule: every 24 hours
 - url: /v1/cron/checkFreeTierBillingUsageCloudTask
   schedule: every 24 hours
+- url: /v1/cron/checkFreeTierBillingUsage
+  schedule: every 99999 hours
 
 
